# modbus-vapi

./: Makefile.am  README.md  autogen.sh  configure.ac  libmodbus.vapi  modbus.vapi
examples/: read-registers.vala
tests/: Makefile.am  bandwidth-server-one.vala  random-test-server.vala  read-registers.vala  setting-timeouts.vala  simple-server.vala  test-server.vala  unit-test-client.vala  unit-test-server.vala  unit-tests.sh  version.vala
