EXTRA_DIST =

noinst_PROGRAMS = \
	unit-test-server \
	version

common_ldflags =

unit_test_server_SOURCES = unit-test-server.vala
unit_test_server_LDADD =

version_SOURCES = version.vala
unit_test_server_LDADD =

AM_CPPFLAGS =

AM_CFLAGS = ${my_CFLAGS}

CLEANFILES = *~ *.log

noinst_SCRIPTS=unit-tests.sh
TESTS=./unit-tests.sh
